@@ -45,6 +45,8 @@ typedef struct _DhAssistantViewClass DhAssistantViewClass;
 
 GType      dh_assistant_view_get_type (void) G_GNUC_CONST;
 GtkWidget* dh_assistant_view_new      (void);
+gboolean   dh_assistant_view_search   (DhAssistantView *self,
+                                       const gchar     *str);
 DhBase*    dh_assistant_view_get_base (DhAssistantView *self);
 void       dh_assistant_view_set_base (DhAssistantView *self,
                                        DhBase          *base);
